--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ function myFunction() {
     </div>
     <div class="f2">
         Copyright ©️ 2019
-        <span  class="suven" style="margin: 0 0.75% 0">Suven Consultants and technology pvt ltd
+        <span  class="suven" style="margin: 0 0.75% 0">Demo demo demo
         </span>
         <span>All rights reserved </span>
     </div>
